--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "productName": "my-app",
+  "name": "popbot",
+  "productName": "popbot",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
@@ -22,6 +22,7 @@
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "electron": "31.3.1",
+    "electron-builder": "^24.13.3",
     "vite": "^5.3.5"
   },
   "keywords": [],
